--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!-- Option 1: Include in HTML -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
         <!-- bootstrap -->
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,800&display=swap" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -29,26 +30,25 @@
               </svg>
               </button>
           </div>
-          <div class="offcanvas-body bg-success">
-            
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <div class="offcanvas-body bg-success" >
+            <ul class="navbar-nav nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <p class="nav-link text-black_nav" aria-current="page" href="#">ABOUT USABOUT US</p>
+                <a class="nav-link " aria-current="page" href="#">ABOUT USABOUT US</a>
               </li>
               <li class="nav-item">
-                <p class="nav-link text-black_nav" aria-current="page" href="#">BUSINESSES</p>
+                <a class="nav-link" aria-current="page" href="#">BUSINESSES</a>
               </li>
               <li class="nav-item dropdown">
-                <p class="nav-link text-black_nav" aria-current="page" href="#">INVESTORS</p>
+                <a class="nav-link " aria-current="page" href="#">INVESTORS</a>
               </li>
               <li class="nav-item dropdown">
-                <p class="nav-link text-black_nav" aria-current="page" href="#">SUSTAINABILITY </p>
+                <a class="nav-link " aria-current="page" href="#">SUSTAINABILITY </a>
               </li>
               <li class="nav-item dropdown">
-                <p class="nav-link text-black_nav" aria-current="page" href="#">NEWS AND MEDIA </p>
+                <a class="nav-link " aria-current="page" href="#">NEWS AND MEDIA </a>
               </li>
               <hr>
-              <div class="d-flex">
+              <div class="d-flex justify-content-center mt-3">
                 <div class="circle-button-black ">
                   <i class="bi bi-youtube"></i>
                 </div>
@@ -181,11 +181,11 @@
           <span class="ms-3 text-secondary"><i class="bi bi-arrow-right fs-3"></i></span>
         </li>
         <li class="card text-start" id="card2">
-          <h2 class="ms-3 text-white">Upcomine Event</h2>
+          <h2 class="ms-3 text-BLACK">Upcomine Event</h2>
           <span class="ms-3 text-secondary"><i class="bi bi-arrow-right fs-3"></i></span>
         </li>
         <li class="card text-start" id="card3">
-          <h2 class="ms-3 text-white">Company News</h2>
+          <h2 class="ms-3 text-BLACK">Company News</h2>
           <span class="ms-3 text-secondary"><i class="bi bi-arrow-right fs-3"></i></span>
         </li>
         <li class="card text-start" id="card4">
@@ -193,7 +193,7 @@
           <span class="ms-3 text-secondary"><i class="bi bi-arrow-right fs-3"></i></span>
         </li>
         <li class="card text-start"id="card5">
-          <h2 class="ms-3">Gallery</h2>
+          <h2 class="ms-3 text-white">Gallery</h2>
           <span class="ms-3 text-secondary"><i class="bi bi-arrow-right fs-3"></i></span>
         </li>
       </ul>
